test/expressions/casts/CastCArrayToCPtr-multiple.42.good
CastCArrayToCPtr-multiple.chpl:56: error: const actual is passed to 'ref' formal 'x' of operator :
